<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MostrarCiudadanos">

    <TextView
        android:id="@+id/viewIdentificacion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_identificacion" />

    <EditText
        android:id="@+id/txtIdentificacion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:labelFor="@id/viewIdentificacion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/viewNombres"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_nombres" />

    <EditText
        android:id="@+id/txtNombres"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:labelFor="@id/viewNombres"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtIdentificacion" />

    <TextView
        android:id="@+id/viewApellidos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_apellidos" />

    <EditText
        android:id="@+id/txtApellidos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:labelFor="@id/viewApellidos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNombres" />

    <TextView
        android:id="@+id/viewFechaNacimeinto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_fecha_nacimiento" />

    <EditText
        android:id="@+id/txtFechaNacimiento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:labelFor="@id/viewFechaNacimeinto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNombres" />

    <TextView
        android:id="@+id/viewRh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_rh" />

    <EditText
        android:id="@+id/txtRh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:labelFor="@id/viewRh"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtFechaNacimiento" />

    <TextView
        android:id="@+id/viewGrupoSanguineo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_grupo_sanguineo" />

    <EditText
        android:id="@+id/txtGrupoSanguineo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:labelFor="@id/viewGrupoSanguineo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtRh" />

    <TextView
        android:id="@+id/viewSexo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_sexo" />

    <EditText
        android:id="@+id/txtSexo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:labelFor="@id/viewSexo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtGrupoSanguineo" />

    <TextView
        android:id="@+id/viewRequerido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_requerido" />

    <EditText
        android:id="@+id/txtRequerido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:labelFor="@id/viewRequerido"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSexo" />

    <Button
        android:id="@+id/btnGuardarActualziacion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Guardar" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabEditar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:clickable="true"
        android:src="@android:drawable/ic_menu_edit" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabEliminar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:clickable="true"
        android:src="@android:drawable/ic_menu_delete" />


</LinearLayout>